@@ -17,7 +17,6 @@ import org.elasticsearch.xpack.security.authc.ldap.support.LdapSession.GroupsRes
 
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
@@ -47,14 +46,16 @@ class UserAttributeGroupsResolver implements GroupsResolver {
     public void resolve(LDAPInterface connection, String userDn, TimeValue timeout, Logger logger, Collection<Attribute> attributes,
                         ActionListener<List<String>> listener) {
         if (attributes != null) {
-            List<String> list = attributes.stream().filter((attr) -> attr.getName().equals(attribute))
-                    .flatMap(attr -> Arrays.stream(attr.getValues())).collect(Collectors.toList());
-            listener.onResponse(Collections.unmodifiableList(list));
+            final List<String> groups = attributes.stream()
+                    .filter((attr) -> attr.getName().equals(attribute))
+                    .flatMap(attr -> Arrays.stream(attr.getValues()))
+                    .collect(Collectors.toUnmodifiableList());
+            listener.onResponse(groups);
         } else {
             searchForEntry(connection, userDn, SearchScope.BASE, OBJECT_CLASS_PRESENCE_FILTER, Math.toIntExact(timeout.seconds()),
                     ignoreReferralErrors, ActionListener.wrap((entry) -> {
                         if (entry == null || entry.hasAttribute(attribute) == false) {
-                            listener.onResponse(Collections.emptyList());
+                            listener.onResponse(List.of());
                         } else {
                             listener.onResponse(List.of(entry.getAttributeValues(attribute)));
                         }
